packages/@lwc/ssr-compiler/src/__tests__/fixtures/wire/errors/throws-when-adapter-is-nested-member-expression/modules/x/adapter/adapter.js
export class Adapter {
    constructor(dataCallback) {
        this.callback = dataCallback;
    }

    connect() {}

    update() {
        this.callback(true);
    }

    disconnect() {}
}
